--- a/index.html
+++ b/index.html
@@ -4,5 +4,9 @@
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 <p>I need a wraper?</p>
+<div id="nav"></div>
+<script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+<script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+<script src="nav.js"></script>
 </body>
 </html>
